# VideoEvolution

./: CMakeLists.txt  DataType.h  FrameConvert.cpp  FrameConvert.h  FrameRecviver.h  RGBAFrameRecviver.cpp  RIFSupport.cpp  VideoDecoder.cpp  VideoDecoder.h  VideoEncoder.cpp  VideoEncoder.h  main.cpp
